# sistema-relatorios

./: .env  .gitignore  API_DOCS.md  BACKUP_README.md  DEPLOY_GUIDE.md  LICENSE  MANUAL_USUARIO.md  README.md  README_DEPLOY_UBUNTU.md  app.py  backup.py  backup_cli.py  corrigir_ultimo_registro.py  deploy.sh  env.example  env.production  fix-502-error.sh  gerar_numeros_os_existentes.py  gunicorn.conf.py  models.py  nginx-sistema-relatorios.conf  pyproject.toml  pytest.ini  quick-fix-502.md  requirements.txt  run.py  run_tests.py  security.py  setup_numero_os.py  sistema-relatorios.service  test_numero_os.py
app/: __init__.py
app/routes/: admin.py  auth.py  backup.py  dp.py  relatorios.py  trafego.py
app/services/: auth_service.py  backup_service.py  relatorio_service.py  supabase_service.py
app/utils/: monitoring.py
backups/: backup_history.json
config/: settings.py
database/schema/: add_numero_os.sql  administradores.sql  arquivos_relatorio.sql  dp_users.sql  porteiros.sql  relatorios.sql  tipos_relatorio.sql  trafego_users.sql
docs/: NUMERO_OS_README.md
static/css/: style.css
static/js/: admin.js  app.js  dp.js  login.js  trafego.js
templates/: admin.html  dp.html  export_template.html  index.html  login.html  trafego.html
tests/: __init__.py  test_app.py  test_models.py
