[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sistema-relatorios"
version = "0.1.0"
description = "Sistema de Relatórios"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
supabase = "1.0.3"
python-dotenv = "1.0.0"
pydantic = "2.6.0"
python-multipart = "0.0.6"
gunicorn = "21.2.0"

[tool.poetry.scripts]
start = "gunicorn app:app"
